--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Android Project</string>
-  <string name="textview">Search For Books!</string>
-  <string name="button">Search</string>
-  <string name="hint">Title and/or Author</string>
+  <string name="app_name">Galacticon</string>
+  <string name="api_key">tp1y0YmIDxAvckAUdmgBfOAGqmvAZfCC49j1DHd2</string>
   <string name="activity_search">Search</string>
+  <string name="activity_recycler">RecyclerView</string>
+  <string name="activity_photos">Photos</string>
   <string name="activity_details">Item Details</string>
-  <string name="share">Share</string>
+  <string name="hint">Hint</string>
+  <string name="textview">TextView</string>
+  <string name="button">Button</string>
+
+  <string name="title_activity_fullscreen">FullscreenActivity</string>
+  <string name="change_layout_manager">Change Layout</string>
 </resources>
