--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
-  <string name="app_name">Galacticon</string>
+  <string name="app_name">Android Project</string>
   <string name="api_key">tp1y0YmIDxAvckAUdmgBfOAGqmvAZfCC49j1DHd2</string>
   <string name="activity_search">Search</string>
   <string name="activity_recycler">RecyclerView</string>
   <string name="activity_photos">Photos</string>
   <string name="activity_details">Item Details</string>
+  <string name="activity_adaptive">Adaptive UI</string>
   <string name="hint">Hint</string>
   <string name="textview">TextView</string>
   <string name="button">Button</string>
