--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="next_button_text">Next</string>
     <string name="title_activity_maps">Map</string>
     <string name="google_maps_key">AIzaSyDzxurRIHsV7mCrAowton1fsS2Anqf-URs</string>
+    <string name="layout_index">layout_index</string>
 </resources>
