--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="hint">Hint</string>
     <string name="textview">TextView</string>
     <string name="button">Button</string>
+    <string name="first_launch">first_launch</string>
 
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="change_layout_manager"></string>
@@ -27,5 +28,10 @@
     <string name="camera_title">Camera</string>
     <string name="run_cloud_search">Run cloud search</string>
     <string name="select_image_for_text_recognition">Select image with @TwitterId for text recognition</string>
+
+    <string name="description_login">User Login and Registration screens</string>
+    <string name="show_as_list">Show as list</string>
+    <string name="show_as_grid">Show as grid</string>
+    <string name="md_detail">Detail</string>
 
 </resources>
