--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,20 +3,21 @@
     <string name="api_key">tp1y0YmIDxAvckAUdmgBfOAGqmvAZfCC49j1DHd2</string>
     <string name="activity_search">Search</string>
     <string name="activity_recycler">RecyclerView</string>
-    <string name="activity_photos">Photos</string>
+    <string name="activity_photos">Photo Detail</string>
     <string name="activity_details">Item Details</string>
     <string name="activity_adaptive">Adaptive UI</string>
-    <string name="hint">Hint</string>
+    <string name="hint">Keyword</string>
     <string name="textview">TextView</string>
     <string name="button">Button</string>
     <string name="first_launch">first_launch</string>
 
     <string name="title_activity_fullscreen">FullscreenActivity</string>
-    <string name="change_layout_manager"></string>
+    <string name="change_layout_manager"> </string>
     <string name="logged_in">Login</string>
     <string name="logged_out">Logout</string>
-    <string name="login">Material Design</string>
     <string name="register">Register</string>
+    <string name="password">Password:</string>
+    <string name="email_id">Email Id:</string>
 
     <string name="activity_viewpager">View Pager With Fragment</string>
     <string name="prev_button_text">Prev</string>
