Impemented Bottom Navigatin bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,7 @@
     <string name="third_tab_fragment">Hello third tab fragment</string>
 
 
+    <string name="title_shop">Shop</string>
+    <string name="title_cart">Cart</string>
+
 </resources>
