--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,8 @@
     <string name="filter_normal">Normal</string>
     <string name="action_save">SAVE</string>
     <string name="action_open">OPEN</string>
+    <string name="appwidget_text">App Widget</string>
+    <string name="add_widget">Add widget</string>
+    <string name="photo_image_view">PhotoImageView</string>
 
 </resources>
