--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,8 @@
     <string name="appwidget_text">App Widget</string>
     <string name="add_widget">Add widget</string>
     <string name="photo_image_view">PhotoImageView</string>
+    <string name="left">Left</string>
+    <string name="center">Center</string>
+    <string name="right">Right</string>
 
 </resources>
